alpm-types/src/relation/snapshots/base::opt_depend_invalid_string_parse_error@case_2.snap
---
source: alpm-types/src/relation/base.rs
---
error: invalid first character of package name
 | 
 | : no_name_colon
 | ^ expected ASCII alphanumeric character
 | 
 = while parsing:
   │ → invalid package name
   └ alpm-package-name: (: no_name_colon)
     → invalid first character of package name
     → expected ASCII alphanumeric character, `_`, `@`, `+`
